# chinese-transcribe

./: .gitignore  CLAUDE.md  Cargo.toml  Epsodie_intro_template.md  README.md  episode_intro_ep0.md  fix_typos.py  install.sh  test_api.sh  typo_checklist.md
legacy/: srt_to_txt.py  transcribe.sh  transcribe_folder.sh
src/: audio.rs  lib.rs  subtitle.rs  worker.rs
