[package]
name = "transcribe-rs"
version = "0.1.4"
edition = "2021"
description = "A simple library to help you transcribe audio"
license = "MIT"
repository = "https://github.com/cjpais/transcribe-rs"

[dependencies]
hound = "3.5.1"
log = "0.4.28"
ndarray = "0.16.1"
ort = { version = "2.0.0-rc.10" }
env_logger = "0.10.0"
regex = "1.11.2"
thiserror = "2.0.16"
once_cell = "1.21.3"
anyhow = "1.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "fs", "process"] }
async-openai = { version = "0.29.3" }
async-trait = { version = "0.1.89" }

derive_builder = { version = "0.20.2" }
actix-web = "4"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
futures = "0.3"
rayon = "1.8"
async-channel = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["metal"] }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"] }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"] }
